# latent_proxy

./: .gitignore  README.md  conftest.py  paper.tex  pyproject.toml
Guidance_Documents/: development_guide.md
configs/active_learning/: default.yaml
configs/game/: default.yaml  variant_b.yaml
configs/stock/: default.yaml
configs/supply_chain/: default.yaml
configs/training/: dpo.yaml  reward_model.yaml
outputs/evaluation_m4_local/: results_bundle.json  results_summary.md
outputs/evaluation_m5_local/: cross_domain_transfer.json
outputs/generalization_local/: results_bundle.json
scripts/: run_cross_domain.py  run_dpo_study.py  run_elicitation.py  run_full_evaluation.py  run_gamma_study.py  run_generalization_study.py  train_alignment.py  train_quality.py
tests/: conftest.py  test_ablation.py  test_alignment_metrics.py  test_cross_domain_transfer.py  test_diagnostic_scenarios.py  test_dpo_data.py  test_dpo_study.py  test_elicitation_loop.py  test_environments.py  test_experiment_runner.py  test_game_variants.py  test_generalization_protocol.py  test_information_gain.py  test_interface_generalization.py  test_llm_elicitation.py  test_multiperiod_eval.py  test_posterior.py  test_quality_floor.py  test_query_generator.py  test_reward_model.py  test_serialization.py  test_statistical_analysis.py  test_stock_backtest.py  test_stock_dpo_data.py  test_stock_scenarios.py  test_stock_serialization.py  test_supply_chain.py  test_supply_chain_scenarios.py  test_supply_chain_serialization.py  test_synthetic_users.py  test_theta_stability.py  test_validation.py
(+53 files in other folders)
