[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "latent-proxy"
version = "0.1.0"
description = "Latent Preference Inference via Conversational Active Learning"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Patrick Cooper" },
]
dependencies = [
    "gymnasium>=1.2.3",
    "numpy>=2.0",
    "scipy>=1.14",
    "numpyro>=0.20.0",
    "jax>=0.4",
    "hydra-core>=1.3",
    "wandb>=0.19",
    "omegaconf>=2.3",
    "torch>=2.0",
    "transformers>=4.48",
    "trl>=0.29",
    "peft>=0.14",
    "bitsandbytes>=0.45",
    "accelerate>=1.3",
    "datasets>=3.0",
    "matplotlib>=3.8",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "mypy>=1.14",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "SIM"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
